--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
 </head>
 
 <body>
+    <header class="header">
+        <h1>Hola</h1>
+    </header>
+    <div class="video">
+        <h2>No sé aquí qué va</h2>
+
+    </div>
+    <div class="texto">
+        <h2>Texto</h2>
+    </div>
     <script src="script.js"></script>
 </body>
 
