--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
     <header class="header">
         <h1>Hola</h1>
     </header>
-    <div class="video">
+    <div class="video" id="video">
         <h2>No sé aquí qué va</h2>
 
     </div>
-    <div class="texto">
-        <h2>Texto</h2>
-    </div>
+    <footer class="footer">
+        <div class="cuadrado"></div>
+        <div class="cuadrado"></div>
+        <div class="cuadrado"></div>
+    </footer>
     <script src="script.js"></script>
 </body>
 
