Video, lo logre, creo
CREO QUE YA LO LOGRE

--- a/index.html
+++ b/index.html
@@ -10,6 +10,19 @@
 </head>
 
 <body>
+    <header class="header">
+        <div>
+            <h1>Titulo</h1>
+        </div>
+    </header>
+    <div class="cuadro">
+        <div class="video" id="video"></div>
+    </div>
+    <footer class="footer">
+        <div class="c1"></div>
+        <div class="c2"></div>
+        <div class="c3"></div>
+    </footer>
     <script src="script.js"></script>
 </body>
 
