--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="estilos.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <title>Ejercicio Scroll</title>
 </head>
 
@@ -18,11 +19,16 @@
 
     </div>
     <footer class="footer">
-        <div class="cuadrado"></div>
-        <div class="cuadrado"></div>
-        <div class="cuadrado"></div>
+        <div class="cuadrado" data-aos="zoom-in-right" data-aos-delay="600"></div>
+        <div class="cuadrado" data-aos="zoom-in" data-aos-delay="300"></div>
+        <div class="cuadrado" data-aos="zoom-in-left" data-aos-delay="900"></div>
     </footer>
     <script src="script.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
+
 </body>
 
 </html>
