--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <div class="cuadrado"></div>
     </footer>
     <script src="script.js"></script>
+    <script src="video.js"></script>
 </body>
 
 </html>
